# SimplnxReview

./: CMakeLists.txt  README.md
data/: ReadMe.md
docs/: FindGroupingDensityFilter.md  FindLocalAverageCAxisMisalignmentsFilter.md  FindMicroTextureRegionsFilter.md  FindSaltykovSizesFilter.md  GroupMicroTextureRegionsFilter.md  InterpolateValuesToUnstructuredGridFilter.md  MergeColoniesFilter.md
docs/Images/: ReadMe.md
src/SimplnxReview/: SimplnxReviewLegacyUUIDMapping.hpp  SimplnxReviewPlugin.cpp  SimplnxReviewPlugin.hpp
src/SimplnxReview/Filters/: FindGroupingDensityFilter.cpp  FindGroupingDensityFilter.hpp  FindLocalAverageCAxisMisalignmentsFilter.cpp  FindLocalAverageCAxisMisalignmentsFilter.hpp  FindMicroTextureRegionsFilter.cpp  FindMicroTextureRegionsFilter.hpp  FindSaltykovSizesFilter.cpp  FindSaltykovSizesFilter.hpp  GroupMicroTextureRegionsFilter.cpp  GroupMicroTextureRegionsFilter.hpp  InterpolateValuesToUnstructuredGridFilter.cpp  InterpolateValuesToUnstructuredGridFilter.hpp  MergeColoniesFilter.cpp  MergeColoniesFilter.hpp
src/SimplnxReview/Filters/Algorithms/: FindGroupingDensity.cpp  FindGroupingDensity.hpp  FindLocalAverageCAxisMisalignments.cpp  FindLocalAverageCAxisMisalignments.hpp  FindMicroTextureRegions.cpp  FindMicroTextureRegions.hpp  FindSaltykovSizes.cpp  FindSaltykovSizes.hpp  GroupMicroTextureRegions.cpp  GroupMicroTextureRegions.hpp  InterpolateValuesToUnstructuredGrid.cpp  InterpolateValuesToUnstructuredGrid.hpp  MergeColonies.cpp  MergeColonies.hpp
test/: CMakeLists.txt  FindLocalAverageCAxisMisalignmentsTest.cpp  FindMicroTextureRegionsTest.cpp  GroupMicroTextureRegionsTest.cpp  MergeColoniesTest.cpp  SimplnxReviewTestUtils.hpp  ctest_pipeline_driver.bat
wrapping/python/: simplnxreview.cpp
